syntax = "proto3";

import "google/api/annotations.proto";

package demo_proto;

//定一个一个Hello的服务
service Hello{
    rpc SendHelpInfoWithGetMethod(DemoProtoHelloRequest) returns (DemoProtoHelloResponse){
        option (google.api.http).get ="/get";
    }

    rpc SendInfoWithPostMethod (DemoProtoHelloRequest) returns (DemoProtoHelloResponse){
        option (google.api.http) = {
        post: "/post"
        body: "*"
        };
    }

}


message DemoProtoHelloRequest{
    string name = 1;
}

message DemoProtoHelloResponse {
    string message = 1;
}